--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_core: ^2.25.4
   random_string: ^2.3.1
   firebase_database: ^10.4.6
+  firebase_remote_config: ^4.3.14
+
 
 dev_dependencies:
   flutter_test:
