--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   random_string: ^2.3.1
   firebase_database: ^10.4.6
   firebase_remote_config: ^4.3.14
+  provider: ^6.1.2
 
 
 dev_dependencies:
